fixed fullscreen editor options button alignment

--- a/app/elements/crm-app/crm-app.css
+++ b/app/elements/crm-app/crm-app.css
@@ -1114,6 +1114,10 @@ paper-checkbox {
 	background-color: #dbdbdb;
 }
 
+#fullscreenEditorSettings {
+	margin-top: 5px;
+}
+
 #fullscreenEditorSettings svg {
 	transform: translateY(-2px);
 }
